--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
 ADMINS=1234567890,1234567890
 BOT_TOKEN=1234567890
-ip=localhost
+PGHOST=YOUR DOCKER IP
 PGUSER=postgres
 PGPASSWORD=1234567890
 DATABASE=postgres
