--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiogram>=2.11.2,<3.0
-asyncpg
+asyncpg~=0.22.0
 aiohttp>=3.6.2
 environs~=8.0.0
 SQLAlchemy~=1.3.23
 gino~=1.0.1
+requests~=2.25.1
+beautifulsoup4~=4.9.3
